# what-should-i-eat-today

./: .env.example  .gitignore  Dockerfile  Dockerfile.bot  Procfile  README.md  bot.py  config.yaml  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh
data/: .gitkeep
data/presets/: default.json
src/: __init__.py  analyzer.py  api.py  cache.py  models.py  scraper.py  storage.py  telegram_bot.py
web/: index.html  package-lock.json  package.json
web/src/: App.vue  main.ts
web/src/components/: FoodRating.vue  StarRating.vue
web/src/stores/: ratings.ts
web/src/views/: MenuView.vue  SettingsView.vue
